# dwn

./: .deny.toml  .env  .gitignore  .prettierignore  Cargo.toml  LICENSE-MIT  README.md  default.nix  deny.toml  flake.nix  treefmt.nix
.sqlx/: query-40e9b57fa8f1f95b8514e505823c1ac2ebc2e6fa641ee39763c01bde6ad968fc.json  query-66193b20e186398fe8d44edb26fc2d8e0f9a32128e97b9e8a6fd12307cf9d595.json  query-6a80220de839766d12809b36499fd23a2696728d97df2b274db091ad95d2080a.json  query-7247c1d4ed7901076ddc84bc40c6b8ca9fc412fc99ad127e7225c5a327676b54.json  query-88cd4b4627b9720e041a6ddcaa1a0090ba5b2ae65ea9bc5cfd914473c5d7097f.json  query-8c5726161d407b5277d83e8ea46311324e15866135f0bd9b5b9c7333057b7389.json  query-90d7fe469fe2c3491835e1bba2d32cfa5f15b72c289829179766145ed410f608.json  query-a6eb0074917eb59d44f4b6ffeff1a9aaaf6b9528407316e8bc72f9d2f7ed21a6.json  query-be525265b5f01d5e7643ccf73fbd66bd36ddd2107116106722f76317f9244500.json  query-eb72048c878de328cadb06af9a548e479b0b24f5aa306d5f5394b5015474c465.json  query-f00023020538a28b0ea298c68ab4996a62d2e8a8aa94475d061b5f722fa796d1.json  query-fd6848e059b0a9309a3e0de456b312ae4541c42535223c64d32a34f90ad9d933.json
crates/dwn/: Cargo.toml  README.md
crates/dwn-core/: Cargo.toml  README.md
crates/dwn-core/src/: data_store.rs  lib.rs  record_store.rs  reply.rs
crates/dwn-core/src/message/: cid.rs  data.rs  mod.rs  record_id.rs
crates/dwn-core/src/message/descriptor/: mod.rs
crates/dwn-core/src/message/descriptor/protocols/: configure.rs  query.rs
crates/dwn-core/src/message/descriptor/records/: delete.rs  mod.rs  query.rs  read.rs  sync.rs  write.rs
crates/dwn-core/src/store/: data.rs  mod.rs  record.rs
crates/dwn-native-db/: Cargo.toml  README.md
crates/dwn-native-db/src/: data_store.rs  lib.rs  record_store.rs
crates/dwn-native-db/src/data/: mod.rs  v1.rs
crates/dwn-native-db/tests/: records.rs
crates/dwn-server/: Cargo.toml  README.md  default.nix
crates/dwn-server/src/: lib.rs  main.rs
crates/dwn-server/src/records/: get.rs
crates/dwn-server/tests/: schema.rs  send.rs  sync.rs  utils.rs
crates/dwn/src/: actor.rs  encode.rs  lib.rs  remote_sync.rs  reply.rs  sync.rs  util.rs
crates/dwn/src/actor/: builder.rs  create.rs  delete.rs  did_key.rs  document_key.rs  mod.rs  query.rs  read.rs  remote.rs  sync.rs  write.rs
crates/dwn/src/actor/protocols/: configure.rs  mod.rs  query.rs
crates/dwn/src/actor/records/: delete.rs  mod.rs  query.rs  read.rs  write.rs
crates/dwn/src/builders/records/: mod.rs  query.rs  read.rs  write.rs
crates/dwn/src/handlers/: mod.rs
crates/dwn/src/handlers/protocols/: configure.rs  mod.rs  query.rs
crates/dwn/src/handlers/records/: delete.rs  mod.rs  query.rs  read.rs  sync.rs  util.rs  write.rs
crates/dwn/src/handlers/validation/: attestation.rs  authorization.rs  jws.rs  mod.rs
crates/dwn/src/message/: auth.rs  data.rs  mod.rs
crates/dwn/src/message/data/: cid.rs  encrypted.rs  mod.rs
crates/dwn/src/message/descriptor/: mod.rs  protocols.rs  records.rs
crates/dwn/src/message/descriptor/protocols/: configure.rs  query.rs
crates/dwn/src/message/descriptor/records/: delete.rs  query.rs  read.rs  write.rs
crates/dwn/src/records/: write.rs
crates/dwn/src/store/: mod.rs  stored_data.rs
crates/dwn/src/store/surrealdb/: data.rs  message.rs  mod.rs  ql.rs
crates/dwn/tests/: encrypt.rs  mod.rs  protocol_records.rs  protocol_records_nested.rs  protocols.rs  protocols_query.rs  publish.rs  query.rs  records.rs  records_read.rs  records_write.rs  utils.rs
crates/dwn/tests/actor/: mod.rs
crates/dwn/tests/protocols/: create.rs  mod.rs
crates/dwn/tests/protocols/anyone_read_write/: mod.rs  protocol.json
crates/dwn/tests/protocols/anyone_write/: mod.rs  protocol.json
crates/dwn/tests/protocols/author_read/: mod.rs  protocol.json
crates/dwn/tests/protocols/author_write/: mod.rs  protocol.json
crates/dwn/tests/protocols/no_actions/: mod.rs
crates/dwn/tests/protocols/published/: mod.rs  published.json  unpublished.json
crates/dwn/tests/protocols/recipient_of_read/: mod.rs  protocol.json
crates/dwn/tests/protocols/recipient_of_write/: mod.rs  protocol.json
crates/dwn/tests/protocols/recipient_read/: mod.rs  protocol.json
crates/dwn/tests/protocols/recipient_read_write/: mod.rs  protocol.json
crates/dwn/tests/protocols/unpublished/: mod.rs
crates/dwn/tests/records/: delete.rs  mod.rs  query.rs  read.rs
crates/dwn/tests/records/write/: mod.rs  schema.rs  update.rs
crates/dwn/tests/validation/: attestation.rs  authorization.rs  mod.rs
crates/xdid/: Cargo.toml  README.md
crates/xdid-core/: Cargo.toml  README.md
crates/xdid-core/src/: did.rs  did_url.rs  document.rs  lib.rs  uri.rs
crates/xdid-core/tests/: document-expected.json  document.rs
crates/xdid-method-key/: Cargo.toml  README.md
crates/xdid-method-key/src/: lib.rs  parser.rs
crates/xdid-method-key/src/keys/: mod.rs  p256.rs  p384.rs
crates/xdid-method-web/: Cargo.toml  README.md
crates/xdid-method-web/src/: lib.rs  parse.rs
crates/xdid/src/: lib.rs  resolver.rs
dwn/: Cargo.toml
dwn-server/: Cargo.toml  README.md
dwn-server/examples/: records.rs
dwn-server/migrations/: 01_create_tables.sql  20240206174844_init.sql  README.md  run.sh
dwn-server/src/: handler.rs  lib.rs  main.rs  model.rs
dwn-server/src/records/: read.rs  write.rs
dwn-server/tests/: db.rs  messages.rs  record.rs  records.rs
dwn-server/tests/utils/: Cargo.toml
dwn-server/tests/utils/src/: lib.rs
dwn-test-utils/: Cargo.toml  README.md
dwn-test-utils/src/: lib.rs
dwn/examples/: authorization.rs  records.rs
dwn/src/: data.rs  features.rs  lib.rs  request.rs  response.rs  util.rs
dwn/src/handlers/: auth.rs  mod.rs
dwn/src/handlers/records/: write.rs
dwn/src/message/: mod.rs
dwn/src/message/descriptor/: mod.rs
dwn/src/request/: data.rs  descriptor.rs  message.rs  mod.rs  records.rs
dwn/src/request/descriptor/: mod.rs  records.rs
dwn/src/store/: mod.rs
dwn/src/store/s3/: mod.rs
dwn/src/store/surrealdb/: data.rs  message.rs  mod.rs  model.rs
examples/: records.rs
(+37 files in other folders)
