[package]
name = "dwn-server"
description = "Rust implementation of a Decentralized Web Node server."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
did-method-key.workspace = true
didkit.workspace = true
dotenvy.workspace = true
dwn = { version = "0.0.2", path = "../dwn" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
dwn-test-utils = { path = "../dwn-test-utils" }
reqwest.workspace = true
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
