[package]
name = "dwn-test-utils"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
did-method-key.workspace = true
didkit.workspace = true
dotenvy.workspace = true
dwn = { path = "../dwn" }
dwn-server = { path = "../dwn-server" }
port_check = "0.1.5"
reqwest.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
