[package]
name = "dwn"
description = "Rust implementation of the Decentralized Web Node specification."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.77"
base64 = "0.21.5"
did-method-key = "0.2.2"
didkit.workspace = true
iana-media-types = "0.1.2"
libipld-cbor = "0.16.0"
libipld-core = "0.16.0"
libipld-json = "0.16.0"
libipld-pb = "0.16.0"
ring = "0.17.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_ipld_dagcbor = "0.4.2"
serde_json = "1.0.108"
serde_with = "3.4.0"
time = { version = "0.3.31", features = ["serde-well-known"] }
tracing = "0.1.40"

[dev-dependencies]
tokio.workspace = true
tracing-subscriber = "0.3.18"
