[package]
name = "dwn"
description = "Rust implementation of the Decentralized Web Node specification."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
did-method-key.workspace = true
didkit.workspace = true
iana-media-types = "0.1.2"
libipld-cbor = "0.16.0"
libipld-core = "0.16.0"
libipld-json = "0.16.0"
libipld-pb = "0.16.0"
ring = "0.17.7"
serde.workspace = true
serde_ipld_dagcbor = "0.4.2"
serde_json.workspace = true
serde_with = "3.4.0"
thiserror = "1.0.57"
time = { version = "0.3.31", features = ["serde-well-known"] }
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true
