[package]
name = "dwn"
description = "Rust implementation of a Decentralized Web Node."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["axum", "mysql", "s3", "surrealdb"]
axum = ["dep:axum"]
mysql = ["dep:sqlx"]
s3 = ["dep:rust-s3"]
surrealdb = ["dep:surrealdb", "dep:tokio"]

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.5"
did-method-key.workspace = true
didkit.workspace = true
dotenvy.workspace = true
iana-media-types = "0.1.2"
libipld = { version = "0.16.0", features = ["serde-codec"] }
libipld-cbor = "0.16.0"
libipld-core = { version = "0.16.0", features = ["serde", "serde-codec", "multibase"] }
ring = "0.17.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_ipld_dagcbor = "0.4.2"
serde_json.workspace = true
serde_with = "3.4.0"
thiserror = "1.0.57"
time = { version = "0.3.31", features = ["serde-well-known"] }
tracing.workspace = true

axum = { workspace = true, optional = true }
rust-s3 = { version = "0.33.0", optional = true }
sqlx = { workspace = true, optional = true }
surrealdb = { version = "1.2.0", optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.18"
