[package]
description          = "Core DWN types."
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "dwn-core"
repository.workspace = true
version.workspace    = true

[dependencies]
base64.workspace     = true
ipld-core            = { features = ["serde"], version = "0.4.2" }
jose-jwa             = "0.1.2"
mime                 = "0.3.17"
rust-unixfs          = "0.5.0"
semver               = { features = ["serde"], version = "1.0.26" }
serde.workspace      = true
serde_ipld_dagcbor   = "0.6.3"
serde_json.workspace = true
serde_with           = "3.13.0"
sha3                 = "0.10.8"
thiserror.workspace  = true
time                 = { features = ["serde-well-known"], version = "0.3.41" }
xdid.workspace       = true
