[package]
description          = "DWN backend implementation using native_db"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "dwn-native-db"
repository.workspace = true
version.workspace    = true

[dependencies]
dwn-core.workspace = true
native_db = "0.8.2"
native_model = { default-features = false, features = [
  "bincode_2_rc",
  "serde",
], version = "0.4.20" }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
xdid.workspace = true
