[package]
description          = "Rust implementation of a Decentralized Web Node."
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "dwn"
repository.workspace = true
version.workspace    = true

[features]
default   = ["native_db"]
native_db = ["dep:dwn-native-db"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
dwn-core.workspace = true
dwn-native-db = { optional = true, workspace = true }
jose-jwk = "0.1.2"
jsonschema = { default-features = false, features = [
  "resolve-http",
], version = "0.33.0" }
reqwest = "0.12.24"
ring = "0.17.14"
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
xdid.workspace = true

[dev-dependencies]
hyper                  = { features = ["http1", "server"], version = "1.7.0" }
hyper-util             = "0.1.17"
port_check.workspace   = true
tokio                  = { features = ["macros", "rt", "rt-multi-thread"], version = "1.48.0" }
tracing-test.workspace = true
