[package]
description          = "Core types for DID methods to implement."
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "xdid-core"
repository.workspace = true
version.workspace    = true

[dependencies]
anyhow.workspace    = true
jose-jwk.workspace  = true
serde               = { features = ["derive"], workspace = true }
serde_with          = "3.15.0"
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
