[package]
description          = "xdid implementation of did:key"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "xdid-method-key"
repository.workspace = true
version.workspace    = true

[features]
default = ["p256", "p384"]
p256    = ["dep:p256", "dep:ring", "dep:serde_json"]
p384    = ["dep:p384", "dep:ring", "dep:serde_json"]

[dependencies]
anyhow              = "1.0.100"
jose-jwk.workspace  = true
multibase           = "0.9.2"
p256                = { features = ["jwk"], optional = true, version = "0.13.2" }
p384                = { features = ["jwk"], optional = true, version = "0.13.1" }
ring                = { optional = true, version = "0.17.14" }
serde_json          = { optional = true, workspace = true }
thiserror.workspace = true
unsigned-varint     = { version = "0.8.0" }
xdid-core.workspace = true
