[package]
description = "Simple DID library."
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "xdid"
repository.workspace = true
version.workspace = true

[features]
default = ["did-key", "did-web"]
did-key = ["dep:xdid-method-key"]
did-web = ["dep:xdid-method-web"]

[dependencies]
thiserror.workspace = true
xdid-core.workspace = true
xdid-method-key = { workspace = true, optional = true }
xdid-method-web = { workspace = true, optional = true }

[dev-dependencies]
hyper = { version = "1.5.0", features = ["http1", "server"] }
hyper-util = "0.1.10"
port_check = "0.2.1"
serde_json.workspace = true
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
