[package]
description          = "Simple DID library."
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "xdid"
repository.workspace = true
version.workspace    = true

[features]
default = ["did-key", "did-web"]
did-key = ["dep:xdid-method-key"]
did-web = ["dep:xdid-method-web"]

[dependencies]
thiserror.workspace = true
xdid-core.workspace = true
xdid-method-key     = { optional = true, workspace = true }
xdid-method-web     = { optional = true, workspace = true }

[dev-dependencies]
hyper                = { features = ["http1", "server"], version = "1.6.0" }
hyper-util           = "0.1.14"
port_check           = "0.2.1"
serde_json.workspace = true
tokio                = { features = ["macros", "rt", "rt-multi-thread"], version = "1.45.1" }
