[package]
name = "dwn-test-utils"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dwn = { path = "../../../dwn" }
dwn-server = { path = "../../" }
port_check = "0.1.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"
tokio.workspace = true
